@@ -2,7 +2,7 @@
 
 _pkgname=fs-uae
 pkgname=fs-uae-devel
-pkgver=2.3.4
+pkgver=2.3.5dev
 pkgrel=1
 pkgdesc="An Amiga multi-platform emulator based on UAE/WinUAE, with a focus on emulating games (development version)."
 arch=("i686" "x86_64")
@@ -13,7 +13,7 @@ install="${pkgname}.install"
 source=("http://fs-uae.net/devel/${pkgver}/${_pkgname}-${pkgver}.tar.gz")
 provides=("fs-uae")
 conflicts=("fs-uae")
-md5sums=('0387d3b4ac89b4bc540f8f6e9711e81c')
+md5sums=('3d8e0e1369e34fa64a5f2fe95cdc3833')
 
 
 
