@@ -3,30 +3,30 @@
 # Contributor: NiteHogg <keith.b.elliott [at] gmail [dot] com>
 
 # Custom properties used in PKGBUILD and auto-package creation.
-_filename_exp=ba-v[#.#].sdz
+_filename_exp=balanced_annihilation-v[#.#].sdz
 _force_update=n
 _category='games'
 
 pkgname=spring-ba
-pkgver=7.78
-pkgrel=2
+pkgver=7.81
+pkgrel=1
 pkgdesc="A popular, highly balanced mod based on the late, immensely popular mod Absolute Annihilation. Balanced Annihilation is designed for competitive 1v1 gameplay but is also perfectly suited for larger team games."
 arch=(any)
 url="http://balancedannihilation.org/"
 license=('GPL' 'CCPL' 'custom:non-free')
 depends=('spring')
 changelog='ChangeLog'
-source=('http://www.springfiles.com/sites/default/files/downloads/spring/games/ba-v7.78.sdz'
+source=('http://springfiles.zebar.de/games/balanced_annihilation-v7.81.sdz'
         'license-non-free')
-noextract=('ba-v7.78.sdz')
-md5sums=('9c62ec3ad1f8824e5e329990c26cb539'
+noextract=('ba-v7.80.sdz')
+md5sums=('28dbcbeb81344c1e70d5e1d6e542e542'
          '28872feaac21fc4b2b4ae00b3f86e52a')
 
 package() {
 
 	mkdir -p $pkgdir/usr/share/spring/mods || return 1
 
-	install -TDm 644 $srcdir/ba-v7.78.sdz $pkgdir/usr/share/spring/mods/ba-v7.78.sdz || return 1
+	install -TDm 644 $srcdir/balanced_annihilation-v7.81.sdz $pkgdir/usr/share/spring/mods/balanced_annihilation-v7.81.sdz || return 1
 	install -Dm 644 $srcdir/license-non-free ${pkgdir}/usr/share/licenses/${pkgname}/non-free || return 1
 }
 
