@@ -1,6 +1,6 @@
 # Maintener sputnick <gilles *DOT* quenot *AT* gmail *DOT* com>
 pkgname=weboob-git
-pkgver=20130822
+pkgver=20130823
 pkgrel=1
 pkgdesc="Weboob (Web Out Of Browsers) provides several applications to interact with a lot of websites."
 url="http://weboob.org"
