@@ -218,3 +218,13 @@
         * spring-ba-7.78
         Routine package update.
 
+2013-08-23 NiteHogg <keith.b.elliott [at] gmail [dot] com>
+
+        * spring-ba-7.81
+        Routine package update.
+
+2013-08-23 NiteHogg <keith.b.elliott [at] gmail [dot] com>
+
+        * spring-ba-7.81
+        Routine package update.
+
